--- a/CollAction/Frontend/app/home/styles/home.scss
+++ b/CollAction/Frontend/app/home/styles/home.scss
@@ -1,3 +1,4 @@
+@import "../../global/styles/logos";
 
 #index {
 
@@ -30,18 +31,6 @@
   #title-logos {
     margin-top: 25px;    
     text-align: center;
-
-    .logo-freonen {
-      margin-right: 41px;
-    }
-
-    .logo-provincie-friesland {
-      margin-right: 26px;
-    }
-
-    .logo-collaction {
-      margin-right: 0px;
-    }
   }  
 
   #title-row {
